卡片資料已完成

--- a/style.css
+++ b/style.css
@@ -14,21 +14,34 @@ body{
     margin-top: 100px;
 }
 .cards{
+    height: 500px;
     width: 325px;
     background-color: #f0f0f0;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     margin: 20px;
+    text-align: center;
+    
 }
-.cards img{
-    width: 50%;
+
+.cards .city{
+    font-size: 36px;
 }
+.cards .today_T{
+    font-size: 24px;
+    display: inline ;
+}
+.cards .today_INF{
+    font-size: 24px;
+    display: inline ;
+}
+/*
 .city{
     text-align: center;
-   font-size: 30px;
+    font-size: 30px;
 }
-.cards p{
+.cards_inf{
 
     justify-content: center;
 }
