已完成大部分前端顯示

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body{
     margin-top: 100px;
 }
 .cards{
-    height: 500px;
     width: 325px;
     background-color: #f0f0f0;
     border-radius: 8px;
@@ -22,26 +21,34 @@ body{
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     margin: 20px;
     text-align: center;
-    
+    padding: 20px;
 }
-
 .cards .city{
     font-size: 36px;
+    margin-bottom: 25px;
 }
 .cards .today_T{
-    font-size: 24px;
+    font-size: 64px;
+    margin-bottom: 25px;
+}
+
+
+
+.cards .INF_TODAY{
+    font-size: 18px;
     display: inline ;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 .cards .today_INF{
     font-size: 24px;
     display: inline ;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-left: 46px;
 }
-/*
-.city{
-    text-align: center;
-    font-size: 30px;
-}
-.cards_inf{
-
-    justify-content: center;
+.WT_img img {
+    width: 150px; /* 設置圖片的寬度 */
+    height: auto; /* 高度自動調整以保持圖片的比例 */
 }
